--- a/views/ExistingReviews.erb
+++ b/views/ExistingReviews.erb
@@ -18,6 +18,11 @@
                     </div>
                     <div class="col-md">
                         <p class="navbar-text navbar-left">
+                            <a href="ExistingReviews" class="navbar-link">See Existing Reviews</a>
+                        </p>
+                    </div>
+                    <div class="col-md">
+                        <p class="navbar-text navbar-left">
                              <a href="CreateReview" class="navbar-link">Review an Item</a>
                         </p>
                     </div>
