--- a/views/CreateReview.erb
+++ b/views/CreateReview.erb
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-
+<!--Created November 30, 2014 by Christian Seremetis and Daniel Greenberg-->
 <html>
      <head>
         <title>Review an Item</title>
