--- a/views/ReviewTemplate.erb
+++ b/views/ReviewTemplate.erb
@@ -1,7 +1,16 @@
 <!DOCTYPE html>
+
+<!--created December 2, 2014 by Christian Seremetis-->
+<!--
 <html>
     <head>
         <title>Recent Reviews</title>
     </head>
-</html>
+
+    <body>
+        <h1>
+            <%=$name%>
+        </h1>
+    </body>
+</html>-->
 
