--- a/views/index.erb
+++ b/views/index.erb
@@ -1,6 +1,6 @@
-<!doctype html>
+<!DOCTYPE html>
 
-<!--this is the homepage-->
+<!--created November 30, 2014 by Christian Seremetis and Daniel Greenberg-->
 
 <html>
     <head>
