--- a/public/style.css
+++ b/public/style.css
@@ -2,8 +2,8 @@
 /*created November 30, 2014 by Christian Seremetis and Daniel Greenberg*/
 
 body{
-    padding-top: 70px;
-    background: url(http://d13pix9kaak6wt.cloudfront.net/background/webdesign_1338484318_44.jpg) no-repeat center center fixed; 
+  padding-top: 70px;
+  background: url(http://d13pix9kaak6wt.cloudfront.net/background/webdesign_1338484318_44.jpg) no-repeat center center fixed; 
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -12,18 +12,20 @@ body{
     font-family: 'Pacifico', cursive;
 }
 
-
-
-
 h1{
-    color: white;
-    font-family: 'Pacifico', cursive;
+  color: white;
+  font-family: 'Pacifico', cursive;
 }
 
+.input{
+  color: black;
+  font-family: 'Open Sans', sans-serif;
+}
 
 .inputLabel{
     padding-top: 100px;
     font-size: 20px;
+    color: white;
 }
 
 .img-circle{
