--- a/public/style.css
+++ b/public/style.css
@@ -9,7 +9,7 @@ body{
   -o-background-size: cover;
   background-size: cover;
   color: white;
-    font-family: 'Pacifico', cursive;
+  /*  font-family: 'Pacifico', cursive;*/
 }
 
 h1{
