--- a/views/CreateReview.erb
+++ b/views/CreateReview.erb
@@ -56,12 +56,12 @@
                     </div>
                     <div class="col-md text-center">
                         <p class="inputLabel">Rating:</p>
-                        <input type="radio" name="rating" value="Outstanding" checked><img src="photos/happy5.png" class="img-circle">
-                        <input type="radio" name="rating" value="above_average" checked><img src="photos/happy3.png" class="img-circle">
-                        <input type="radio" name="rating" value="average" checked><img src="photos/happy6.png" class="img-circle">
-                        <input type="radio" name="rating" value="below-average" checked><img src="photos/happy1.png" class="img-circle">
-                        <input type="radio" name="rating" value="poor" checked><img src="photos/happy4.png" class="img-circle">
-                        <input type="radio" name="rating" value="horrible" checked><img src="photos/happy2.png" class="img-circle">
+                        <input class="rating" type="radio" name="rating" value="Outstanding" checked><label for="Outstanding">Outstanding<img src="photos/happy5.png" class="img-circle"></label>
+                        <input class="rating" type="radio" name="rating" value="above_average" checked><label for="above_average"><img src="photos/happy3.png" class="img-circle"></label>
+                        <input class="rating" type="radio" name="rating" value="average" checked><label for="average"><img src="photos/happy6.png" class="img-circle"></label>
+                        <input class="rating" type="radio" name="rating" value="below-average" checked><label for="below-average"><img src="photos/happy1.png" class="img-circle"></label>
+                        <input class="rating" type="radio" name="rating" value="poor" checked><label for="poor"><img src="photos/happy4.png" class="img-circle"></label>
+                        <input class="rating" type="radio" name="rating" value="horrible" checked><label for="horrible"><img src="photos/happy2.png" class="img-circle"></label>
                     </div>
                     <br>
                     <br>
