--- a/views/CreateReview.erb
+++ b/views/CreateReview.erb
@@ -56,7 +56,7 @@
                     </div>
                     <div class="col-md text-center">
                         <p class="inputLabel">Rating:</p>
-                        <input class="rating" type="radio" name="rating" value="Outstanding" checked><label for="Outstanding">Outstanding<img src="photos/happy5.png" class="img-circle"></label>
+                        <input class="rating" type="radio" name="rating" value="Outstanding" checked><label for="Outstanding"><img src="photos/happy5.png" class="img-circle"></label>
                         <input class="rating" type="radio" name="rating" value="above_average" checked><label for="above_average"><img src="photos/happy3.png" class="img-circle"></label>
                         <input class="rating" type="radio" name="rating" value="average" checked><label for="average"><img src="photos/happy6.png" class="img-circle"></label>
                         <input class="rating" type="radio" name="rating" value="below-average" checked><label for="below-average"><img src="photos/happy1.png" class="img-circle"></label>
