--- a/views/CreateReview.erb
+++ b/views/CreateReview.erb
@@ -59,7 +59,7 @@
                         <input class="rating" type="radio" name="rating" value="Outstanding" checked><label for="Outstanding"><img src="photos/happy5.png" class="img-circle"></label>
                         <input class="rating" type="radio" name="rating" value="above_average" checked><label for="above_average"><img src="photos/happy3.png" class="img-circle"></label>
                         <input class="rating" type="radio" name="rating" value="average" checked><label for="average"><img src="photos/happy6.png" class="img-circle"></label>
-                        <input class="rating" type="radio" name="rating" value="below-average" checked><label for="below-average"><img src="photos/happy1.png" class="img-circle"></label>
+                        <input class="rating" type="radio" name="rating" value="below_average" checked><label for="below-average"><img src="photos/happy1.png" class="img-circle"></label>
                         <input class="rating" type="radio" name="rating" value="poor" checked><label for="poor"><img src="photos/happy4.png" class="img-circle"></label>
                         <input class="rating" type="radio" name="rating" value="horrible" checked><label for="horrible"><img src="photos/happy2.png" class="img-circle"></label>
                     </div>
