Updated 12-7-2014 by Christian Seremetis

--- a/public/style.css
+++ b/public/style.css
@@ -9,12 +9,15 @@ body{
   -o-background-size: cover;
   background-size: cover;
   color: white;
-  /*  font-family: 'Pacifico', cursive;*/
 }
 
 h1{
   color: white;
   font-family: 'Pacifico', cursive;
+}
+
+.updateButtons{
+  font-size: 20px;
 }
 
 .input{
