--- a/views/ReviewTemplate.erb
+++ b/views/ReviewTemplate.erb
@@ -1,2 +1,14 @@
+<!DOCTYPE html>
 
+<!--this is used to update existing reviews-->
+<html>
+    <head>
+        <title>Update Review</title>
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
+        <link rel="stylesheet" type="text/css" href="/style.css">
+    </head>
+    
+    <body>
 
+    </body>
+</html>
