--- a/views/ExistingReviews.erb
+++ b/views/ExistingReviews.erb
@@ -40,10 +40,16 @@
             <br>
             <div class="row">
                 <div class="col-md text-centered">
+
+                    <!--creates buttons for each review, which redirects the user to the ReviewTemplate page-->
+                    
                     <%@reviews.each do |review|%>
-                        <h2><%=review[1]["productName"]%></h2>
-                        <h3><%=review[1]["rating"]%></h3>
-                    <%end%>
+                    <form class="input" action="/UpdateReview" method="POST">
+                        <p>
+                            <input type="button" value=<%=review[1]["productName"]%> class="updateButtons">
+                            <%end%>
+                        </p>
+                    </form>
                 </div>
             </div>
         </div>
