updated 12-7-2014 by Christian Seremetis

--- a/views/ReviewTemplate.erb
+++ b/views/ReviewTemplate.erb
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<!--this is used to update existing reviews-->
+<!--this is used to view and update existing reviews-->
 <html>
     <head>
         <title>Update Review</title>
