--- a/views/ExistingReviews.erb
+++ b/views/ExistingReviews.erb
@@ -39,17 +39,28 @@
             <br>
             <br>
             <div class="row">
-                <div class="col-md text-centered">
 
-                    <!--creates buttons for each review, which redirects the user to the ReviewTemplate page-->
-                    
-                    <%@reviews.each do |a|%>
+                <div class="col-md" id="view">
+
+                    <!--allows for a user to search a specific item to see reviews for-->
+
                     <form class="input" action="/UpdateReview" method="POST">
-                        <p>
-                            <input type="submit" value="<%=a[1]["productName"]%>">
-                            <%end%>
-                        </p>
+                        <input type="text" name="name">
+                        <input type="submit" value="View Item">
                     </form>
+
+                </div>
+
+                <div class="col-md text-centered">
+                    <p>
+                        <%@reviews.each do |a|%>
+
+                        <div class="col-md">
+                            <%=a[1]["productName"]%>
+                        </div>
+                            
+                        <%end%>
+                    </p>
                 </div>
             </div>
         </div>
