--- a/public/style.css
+++ b/public/style.css
@@ -13,12 +13,7 @@ body{
 
 h1{
   color: white;
-  font-family: 'Pacifico', cursive;
-}
-
-.updateButtons{
-  font-size: 25px;
-}
+1}
 
 .input{
   color: black;
