--- a/views/ExistingReviews.erb
+++ b/views/ExistingReviews.erb
@@ -25,7 +25,7 @@
                     </div>
                     <div class="col-md">
                         <p class="navbar-text navbar-left">
-                             <a href="CreateReview" class="navbar-link">Review an Item</a>
+                             <a href="CreateReview" class="navbar-link">Review A New Item</a>
                         </p>
                     </div>
                 </div>
@@ -50,6 +50,9 @@
                     </form>
 
                 </div>
+
+                <br>
+                <br>
 
                 <div class="col-md text-centered">
                     <p>
