--- a/views/index.erb
+++ b/views/index.erb
@@ -25,7 +25,7 @@
                     </div>
                     <div class="col-md">
                         <p class="navbar-text navbar-left">
-                            <a href="CreateReview" class="navbar-link">Review an Item</a>
+                            <a href="CreateReview" class="navbar-link">Review A New Item</a>
                         </p>
                     </div>
                 </div>
