Updated 12-10-2014 by Christian Seremetis

--- a/views/CreateReview.erb
+++ b/views/CreateReview.erb
@@ -56,7 +56,7 @@
                     </div>
                     <div class="col-md text-center">
                         <p class="inputLabel">Rating:</p>
-                        <input type="radio" name="rating" value="Outstanding" checked><label for="Outstanding"><img src="photos/happy5.png" class="img-circle"></label>
+                        <input type="radio" name="rating" value="outstanding" checked><label for="Outstanding"><img src="photos/happy5.png" class="img-circle"></label>
                         <input type="radio" name="rating" value="above_average" checked><label for="above_average"><img src="photos/happy3.png" class="img-circle"></label>
                         <input type="radio" name="rating" value="average" checked><label for="average"><img src="photos/happy6.png" class="img-circle"></label>
                         <input type="radio" name="rating" value="below_average" checked><label for="below-average"><img src="photos/happy1.png" class="img-circle"></label>
@@ -66,7 +66,7 @@
                     <br>
                     <br>
                     <div class="col-md text-center">
-                        <input type="Submit">
+                        <input type="Submit" value="Create New Review">
                     </div>
                     <br>
                     <br>
