--- a/views/ReviewTemplate.erb
+++ b/views/ReviewTemplate.erb
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 
+<!--created December 3, 2014 by Christian Seremetis-->
 <!--this is used to view and update existing reviews-->
 <html>
     <head>
@@ -10,5 +11,6 @@
     
     <body>
         <h1><%=@name%></h1>
+        <h2><%=@opinion%></h2>
     </body>
 </html>
