--- a/views/ExistingReviews.erb
+++ b/views/ExistingReviews.erb
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<!--created November 30, 2014 by Christian Seremetis and Daniel Greenberg-->
+<!--created November 30, 2014 by Christian Seremetis-->
 
 <html>
     <head>
