Updated 12-10-2014 by Christian Seremetis

--- a/views/CreateReview.erb
+++ b/views/CreateReview.erb
@@ -56,12 +56,12 @@
                     </div>
                     <div class="col-md text-center">
                         <p class="inputLabel">Rating:</p>
-                        <input type="radio" name="rating" value="outstanding" checked><label for="Outstanding"><img src="photos/happy5.png" class="img-circle"></label>
-                        <input type="radio" name="rating" value="above_average" checked><label for="above_average"><img src="photos/happy3.png" class="img-circle"></label>
-                        <input type="radio" name="rating" value="average" checked><label for="average"><img src="photos/happy6.png" class="img-circle"></label>
-                        <input type="radio" name="rating" value="below_average" checked><label for="below-average"><img src="photos/happy1.png" class="img-circle"></label>
-                        <input type="radio" name="rating" value="poor" checked><label for="poor"><img src="photos/happy4.png" class="img-circle"></label>
-                        <input type="radio" name="rating" value="horrible" checked><label for="horrible"><img src="photos/happy2.png" class="img-circle"></label>
+                        <input type="radio" name="rating" value="a" checked><label for="a"><img src="photos/happy5.png" class="img-circle"></label>
+                        <input type="radio" name="rating" value="b" checked><label for="b"><img src="photos/happy3.png" class="img-circle"></label>
+                        <input type="radio" name="rating" value="c" checked><label for="c"><img src="photos/happy6.png" class="img-circle"></label>
+                        <input type="radio" name="rating" value="d" checked><label for="d"><img src="photos/happy1.png" class="img-circle"></label>
+                        <input type="radio" name="rating" value="e" checked><label for="e"><img src="photos/happy4.png" class="img-circle"></label>
+                        <input type="radio" name="rating" value="f" checked><label for="f"><img src="photos/happy2.png" class="img-circle"></label>
                     </div>
                     <br>
                     <br>
