--- a/views/ExistingReviews.erb
+++ b/views/ExistingReviews.erb
@@ -34,7 +34,7 @@
 
         <div class="container">
             <div class="row">
-                <h1>Recent Reviews</h1>
+                <h1 id="existing">Recent Reviews</h1>
             </div>
             <br>
             <br>
