--- a/views/index.erb
+++ b/views/index.erb
@@ -40,7 +40,7 @@
             <br>
             <br>
             <div class="row">
-                <div class="col-md text-center" id="faces">
+                <div class="col-md text-center">
                     <img src="photos/happy5.png" class="img-circle">
                     <img src="photos/happy3.png" class="img-circle">
                     <img src="photos/happy6.png" class="img-circle">
