--- a/views/index.erb
+++ b/views/index.erb
@@ -51,6 +51,7 @@
             </div>
             <div class="row">
                 <div class="col-md text-center">
+                    <p>Everything was beautiful and nothing hurt!</p>
                     <div class="btn-group" role="group" id="button1">
                         <a href="ExistingReviews">
                             <button type="button" class="btn btn-default">
