--- a/views/ReviewTemplate.erb
+++ b/views/ReviewTemplate.erb
@@ -35,37 +35,44 @@
             <div class="row">
                 <div class="col-md text-centered">
                      <h2 class="viewed_reviews">
-                            <%if @name==nil%>
-                                <p>The Product you searched does not exist. Please reword your search and try again</p>
-                                <img src="http://a.dilcdn.com/bl/wp-content/uploads/sites/8/babyzone/2013/04/baby-boy-crying-photo-420x420-ts-56570356.jpg" id="baby">
-                                <br>
-                                <br>
-                                <br>
-                                <form class="input" action="/Defer" method="POST" id="updateButton">
-                                    <input type="submit" value="or CLICK HERE to create a new review">
+                        <%if @name==nil%>
+                            <p>The Product you searched does not exist. Please reword your search and try again</p>
+                            <img src="http://a.dilcdn.com/bl/wp-content/uploads/sites/8/babyzone/2013/04/baby-boy-crying-photo-420x420-ts-56570356.jpg" id="baby">
+                            <br>
+                            <br>
+                            <br>
+                            <form class="input" action="/Defer" method="POST" id="updateButton">
+                            <input type="submit" value="or CLICK HERE to create a new review">
                                 </form>           
-                            <%else%>
-                                <div class="row">
-                                    <h1><%=@name.upcase%></h1>
-                                </div>
-                                <br>
-                                <br>
-                                <div class="faces">             
-                                <img src="photos/happy5.png" class="img-circle">
-                                <img src="photos/happy3.png" class="img-circle">
-                                <img src="photos/happy6.png" class="img-circle">
-                                <img src="photos/happy1.png" class="img-circle">
-                                <img src="photos/happy4.png" class="img-circle">
-                                <img src="photos/happy2.png" class="img-circle">
+                        <%else%>
+
+                        <%@MutableReviews = @opinions.values%>
+                            <div class="row">
+                                <h1><%=@name.upcase%></h1>
                             </div>
                             <br>
-
-                            <!--this is where the numbers for existing reviews are displayed-->
-                            <%mutableReviews = @opinion.values%>
-                            <%mutableReviews.each do |reviews|%>
-                            <%=reviews%>
-                            <%end%>
-                        
+                            <br>
+                            <div class="faces">             
+                            <img src="photos/happy5.png" class="img-circle">
+                            <br>
+                            <%=@MutableReviews[0]%>
+                            <img src="photos/happy3.png" class="img-circle">
+                            <br>
+                            <%=@MutableReviews[1]%>
+                            <img src="photos/happy6.png" class="img-circle">
+                            <br>
+                            <%=@MutableReviews[2]%>
+                            <img src="photos/happy1.png" class="img-circle">
+                            <br>
+                            <%=@MutableReviews[3]%>
+                            <img src="photos/happy4.png" class="img-circle">
+                            <br>
+                            <%=@MutableReviews[4]%>
+                            <img src="photos/happy2.png" class="img-circle">
+                            <br>
+                            <%=@MutableReviews[5]%>
+                            </div>
+                        <%end%>
                     </h2>
                 </div>
             </div>
@@ -77,7 +84,6 @@
                     <input type="submit" value="Review This Item">
                 </form>
             </div>
-            <%end%>
         </div>  
     </body>
 </html>
