--- a/views/index.erb
+++ b/views/index.erb
@@ -51,7 +51,10 @@
             </div>
             <div class="row">
                 <div class="col-md text-center">
-                    <p>Everything was beautiful and nothing hurt!</p>
+                    <br>
+                    <br>
+                    <br>
+                    <h3>Everything was beautiful and nothing hurt!</h3>
                     <div class="btn-group" role="group" id="button1">
                         <a href="ExistingReviews">
                             <button type="button" class="btn btn-default">
