--- a/views/index.erb
+++ b/views/index.erb
@@ -13,9 +13,14 @@
         <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation" id="navbar">
             <div class="container">
                 <div class="row">
+                       <div class="col-md">
+                        <p class="navbar-text navbar-left">
+                             <a href="/" class="navbar-link">Home</a>
+                        </p>
+                    </div>
                     <div class="col-md">
                         <p class="navbar-text navbar-left">
-                            <a href="about" class="navbar-link">Home</a>
+                            <a href="about" class="navbar-link">About</a>
                         </p>
                     </div>
                     <div class="col-md">
