--- a/views/ReviewTemplate.erb
+++ b/views/ReviewTemplate.erb
@@ -46,7 +46,7 @@
                                 </form>           
                         <%else%>
 
-                        <%@MutableReviews = @opinions.values%>
+                            <%@MutableReviews = @opinion.values%>
                             <div class="row">
                                 <h1><%=@name.upcase%></h1>
                             </div>
@@ -54,23 +54,18 @@
                             <br>
                             <div class="faces">             
                             <img src="photos/happy5.png" class="img-circle">
-                            <br>
-                            <%=@MutableReviews[0]%>
                             <img src="photos/happy3.png" class="img-circle">
-                            <br>
-                            <%=@MutableReviews[1]%>
                             <img src="photos/happy6.png" class="img-circle">
-                            <br>
-                            <%=@MutableReviews[2]%>
                             <img src="photos/happy1.png" class="img-circle">
-                            <br>
-                            <%=@MutableReviews[3]%>
                             <img src="photos/happy4.png" class="img-circle">
-                            <br>
-                            <%=@MutableReviews[4]%>
                             <img src="photos/happy2.png" class="img-circle">
-                            <br>
-                            <%=@MutableReviews[5]%>
+                            </div>
+                            <div class="row" id="opinions">
+                                <%=@MutableReviews[0]%>
+                                <%=@MutableReviews[2]%>
+                                <%=@MutableReviews[3]%>
+                                <%=@MutableReviews[4]%>
+                                <%=@MutableReviews[5]%>
                             </div>
                         <%end%>
                     </h2>
