--- a/views/ReviewTemplate.erb
+++ b/views/ReviewTemplate.erb
@@ -52,21 +52,36 @@
                             </div>
                             <br>
                             <br>
-                            <div class="faces">             
-                            <img src="photos/happy5.png" class="img-circle">
-                            <img src="photos/happy3.png" class="img-circle">
-                            <img src="photos/happy6.png" class="img-circle">
-                            <img src="photos/happy1.png" class="img-circle">
-                            <img src="photos/happy4.png" class="img-circle">
-                            <img src="photos/happy2.png" class="img-circle">
-                            </div>
-                            <div class="row" id="opinions">
+                            <div class="col-xs-2">
+                                <img src="photos/happy5.png" class="img-circle">
+                                <br>
                                 <%=@MutableReviews[0]%>
-                                <%=@MutableReviews[2]%>
-                                <%=@MutableReviews[3]%>
-                                <%=@MutableReviews[4]%>
-                                <%=@MutableReviews[5]%>
                             </div>
+                            <div class="col-xs-2">
+                                <img src="photos/happy3.png" class="img-circle">
+                                <br>
+                                <%=@MutableReviews[1]%>
+                            </div> 
+                            <div class="col-xs-2">
+                                <img src="photos/happy6.png" class="img-circle">
+                                <br>
+                                <%=@MutableReviews[2]%>
+                            </div>  
+                            <div class="col-xs-2">
+                                <img src="photos/happy1.png" class="img-circle">
+                                <br>
+                                <%=@MutableReviews[3]%>
+                            </div>              
+                            <div class="col-xs-2">
+                                <img src="photos/happy4.png" class="img-circle">
+                                <br>
+                                <%=@MutableReviews[4]%>
+                            </div>
+                            <div class="col-xs-2">
+                                <img src="photos/happy2.png" class="img-circle">
+                                <br>
+                                <%=@MutableReviews[5]%>
+                            </div>  
                         <%end%>
                     </h2>
                 </div>
