--- a/views/About.erb
+++ b/views/About.erb
@@ -35,3 +35,22 @@
                 </div>
             </div>
         </nav>
+        <div class="container">
+            <div class="row">
+                <div class="col-md text-center">
+                    <h1>Meet The Team</h1>
+                </div>  
+            </div>
+            <br>
+            <br>
+            <div class="row">
+                <div class="col-md text-center">
+                    <img src="photos/IMG_0671.JPG" class="img-circle photo">
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md text-center">
+                    <p class="daniel_bio">Daniel Greenberg is the Chief of Web Development for Recent Reviews. He began coding in early 2013. ALthough he has built numerous sites using Weebly, this is his first major project. He is currently working on iOS apps. 
+                    </p>
+                </div> 
+            </div>
