--- a/views/About.erb
+++ b/views/About.erb
@@ -50,7 +50,29 @@
             </div>
             <div class="row">
                 <div class="col-md text-center">
-                    <p class="daniel_bio">Daniel Greenberg is the Chief of Web Development for Recent Reviews. He began coding in early 2013. ALthough he has built numerous sites using Weebly, this is his first major project. He is currently working on iOS apps. 
+                    <p class="daniel_bio">Daniel Greenberg is the Head of Web Development and Design for Recent Reviews. He began coding in early 2013. ALthough he has built numerous sites using Weebly, this is his first major project. He is currently working on iOS apps. 
                     </p>
                 </div> 
             </div>
+            <br>
+            <br>
+            <br>
+            <div class="row">
+                <div class="col-md text-center">
+                    <img src="photos/hey.jpg" class="img-circle photo">
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md text-center">
+                    <p class="daniel_bio"> Christian is the Chief of Web Development for Recent Reviews. He has no life worth speaking about. All he wants you to do is enjoy his website before he dies... For him, things haven't been the same after the accident... 
+                    </p>
+                </div> 
+            </div>
+        </div>
+    </body
+</html>
+
+
+
+
+
