--- a/views/index.erb
+++ b/views/index.erb
@@ -59,7 +59,7 @@
                     <br>
                     <br>
                     <br>
-                    <h3>Everything was beautiful and nothing hurt!</h3>
+                    <h3>"Everything was beautiful and nothing hurt"</h3>
                     <div class="btn-group" role="group" id="button1">
                         <a href="ExistingReviews">
                             <button type="button" class="btn btn-default">
