--- a/views/ReviewTemplate.erb
+++ b/views/ReviewTemplate.erb
@@ -20,6 +20,11 @@
                     </div>
                     <div class="col-md">
                         <p class="navbar-text navbar-left">
+                            <a href="about" class="navbar-link">About</a>
+                        </p>
+                    </div>
+                    <div class="col-md">
+                        <p class="navbar-text navbar-left">
                             <a href="ExistingReviews" class="navbar-link">See Existing Reviews</a>
                         </p>
                     </div>
@@ -41,8 +46,8 @@
                             <br>
                             <br>
                             <br>
-                            <form class="input" action="/Defer" method="POST" id="updateButton">
-                            <input type="submit" value="or CLICK HERE to create a new review">
+                            <form class="input" action="/Defer" method="POST">
+                            <input type="submit" value="or CLICK HERE to create a new review" id="updateButton">
                                 </form>           
                         <%else%>
 
@@ -81,6 +86,14 @@
                                 <img src="photos/happy2.png" class="img-circle">
                                 <br>
                                 <%=@MutableReviews[5]%>
+                            </div>
+                            <div class="row">
+                                <form class="input" action="AddReview" method="POST">
+                                    <br>
+                                    <br>
+                                    <br>
+                                    <input type="submit" value="Review This Item" id="updateButton">
+                                </form>
                             </div>  
                         <%end%>
                     </h2>
@@ -89,11 +102,6 @@
             <br>
             <br>
             <br>
-            <div class="row">
-                <form class="input" action="AddReview" method="POST" id="updateButton">
-                    <input type="submit" value="Review This Item">
-                </form>
-            </div>
         </div>  
     </body>
 </html>
