--- a/views/CreateReview.erb
+++ b/views/CreateReview.erb
@@ -29,7 +29,7 @@
                     </div>
                     <div class="col-md">
                         <p class="navbar-text navbar-left">
-                            <a href="CreateReview" class="navbar-link">Review A New Item</a>
+                            <a href="CreateReview" class="navbar-link">Review An Item</a>
                         </p>
                     </div>
                 </div>
