--- a/views/About.erb
+++ b/views/About.erb
@@ -64,7 +64,7 @@
             </div>
             <div class="row">
                 <div class="col-md text-center">
-                    <p class="daniel_bio"> Christian is the Chief of Web Development for Recent Reviews. He has no life worth speaking about. All he wants you to do is enjoy his website before he dies... For him, things haven't been the same after the accident... 
+                    <p class="daniel_bio"> Christian is the Chief of Web Development for Recent Reviews. He has no life worth speaking about. All he wants is for you to enjoy his website before he dies... For him, things haven't been the same after the accident... 
                     </p>
                 </div> 
             </div>
