--- a/views/index.erb
+++ b/views/index.erb
@@ -60,6 +60,7 @@
                     <br>
                     <br>
                     <h3>"Everything was beautiful and nothing hurt"</h3>
+                    <h3>Review anything you want!</h3>
                     <div class="btn-group" role="group" id="button1">
                         <a href="ExistingReviews">
                             <button type="button" class="btn btn-default">
