--- a/views/ExistingReviews.erb
+++ b/views/ExistingReviews.erb
@@ -64,7 +64,7 @@
                 <div class="col-md text-centered">
                     <%@reviews.each do |a|%>
                         <div class="col-md">
-                            <h3><%=(a[1]["productName"]).upcase%><h3>
+                            <h3><%=(a[1]["productName"]).strip%><h3>
                         </div>     
                     <%end%>
                 </div>
