--- a/views/About.erb
+++ b/views/About.erb
@@ -50,7 +50,7 @@
             </div>
             <div class="row">
                 <div class="col-md text-center">
-                    <p class="daniel_bio">Daniel Greenberg is the Head of Web Development and Design for Recent Reviews. He began coding in early 2013. Although he has built numerous sites using Weebly, this is his first major project. He is currently working on iOS apps. 
+                    <p class="daniel_bio">Daniel Greenberg is the Head of Web Development and Design for Recent Reviews. He began coding in early 2013. He is currently working on iOS apps. 
                     </p>
                 </div> 
             </div>
