--- a/views/CreateReview.erb
+++ b/views/CreateReview.erb
@@ -57,7 +57,7 @@
             <div class="row">
                 <form class="input" action="/CreateReview" method="POST">
                     <div class="col-md text-center">
-                        <input type="text" name="productName" value=<%=@name%>>
+                        <input type="text" name="productName">
                     </div>
                     <div class="col-md text-center">
                         <p class="inputLabel">Rating:</p>
