--- a/views/ReviewTemplate.erb
+++ b/views/ReviewTemplate.erb
@@ -51,7 +51,7 @@
                             </form>           
                         <%else%>
 
-                            <%@MutableReviews = @opinion.values%>
+                            <%@MutableReviews = @NewReview.values%>
                             <div class="row">
                                 <h1><%=@name.upcase%></h1>
                             </div>
